--- a/com/css/style.css
+++ b/com/css/style.css
@@ -67,9 +67,9 @@ display:block; font-size:13px; cursor:pointer;}
 .formLRMain .textBox input{width:300px;}
 
 .menuMain{}
-.menuMain .menuInner{margin:10px auto 0; width:360px; border-bottom:4px double #aec6dc; padding-bottom:5px;}
+.menuMain .menuInner{margin:10px auto 0; width:365px; border-bottom:4px double #aec6dc; padding-bottom:5px;}
 .menuMain a{float:left; padding:5px; font-family: 'open_sanssemibold'; font-weight:normal; text-transform:uppercase; text-decoration:none; color:#256f9c; font-size:15px;}
-.menuMain a:hover, .menuMain a.activeM{color:#be4954;}
+.menuMain a:hover, .menuMain a.activeM, .menuMain a.selectedMenu{color:#be4954;}
 
 .contLeftRightMain{}
 .contLeftRightMain .contLeftMain{width:30%; min-height:470px; background:#fbfbfb; border:1px solid #ccc; border-radius:5px; box-shadow:0 0 2px #ddd; padding:10px;}
@@ -79,15 +79,17 @@ display:block; font-size:13px; cursor:pointer;}
 .formInvoiceMain .textBox input{float:none; display:block;}
 
 .checkBoxSectionMain{margin:0; padding:0;}
-.checkBoxSectionMain .chkBox{margin-bottom:10px; list-style:none;}
-.checkBoxSectionMain .chkBox a{float:left; font-size:13px; margin-left:5px; color:#0076bf; text-decoration:none;}
+.checkBoxSectionMain .chkBox{list-style:none; border-bottom:1px solid #f1f1f1; margin-bottom:7px; padding-bottom:7px;}
+.checkBoxSectionMain .chkBox a{float:left; font-size:13px; width:273px; margin-left:5px; color:#0076bf; text-decoration:none;}
 .checkBoxSectionMain .chkBox a:hover{text-decoration:underline;}
 .checkBoxSectionMain .chkBox input{float:left; margin-top:4px;}
+.checkBoxSectionMain .chkBox .linkStyleLst{}
+.checkBoxSectionMain .chkBox .unlinkStyleLst span{color:#a7a7a7; font-size:13px; width:279px;}
 
 .contRightMain table{border-bottom:1px solid #e6d2d2; border-right:1px solid #e6d2d2;}
 .contRightMain table tr{}
 .contRightMain table tr th{border-top:1px solid #e6d2d2; font-family: 'open_sanssemibold';  background:#f9f1f1; font-weight:normal; border-left:1px solid #e6d2d2; padding:5px;}
-.contRightMain table tr td{border-top:1px solid #e6d2d2; font-family: 'open_sansregular'; border-left:1px solid #e6d2d2; padding:5px;}
+.contRightMain table tr td{border-top:1px solid #e6d2d2; font-family: 'open_sansregular'; word-break:break-all; border-left:1px solid #e6d2d2; padding:5px;}
 .contRightMain table tr:nth-child(odd) {background-color:#f7f7f7;}
 .contRightMain table tr:nth-child(even) {background-color:#fff;}
 
@@ -104,8 +106,8 @@ display:block; font-size:13px; cursor:pointer;}
 .confirmBoxStyle .btnMainCB .btnYes{background:url(../images/greenBtn.png) repeat-x left top;}
 .confirmBoxStyle .btnMainCB .btnCancel{background:url(../images/redBtnBg.png) repeat-x left top; margin-right:0;}
 
-.formLightBoxMain{padding:20px 10px 10px; margin:0 auto; width:292px;}
-.formLightBoxMain .textBox label{width:70px;}
+.formLightBoxMain{padding:20px 10px 10px; margin:0 auto; width:310px;}
+.formLightBoxMain .textBox label{width:90px;}
 .formLightBoxMain .textBox input{width:200px;}
 
 .vanDetailsTbl{padding:0 5px 5px 15px;}
@@ -118,4 +120,4 @@ display:block; font-size:13px; cursor:pointer;}
 .logoPartMain .logoPMain{margin-bottom:10px;}
 .logoPartMain .adrsLP{color:#444;}
 
-
+.billDatesBox{background:#eaf5f7; border:1px solid #c2ecff; margin-left:120px; margin-top:4px; padding:5px 5px 0 5px; width:301px;}
