--- a/com/css/style.css
+++ b/com/css/style.css
@@ -92,6 +92,7 @@ display:block; font-size:13px; cursor:pointer;}
 .contRightMain table tr td{border-top:1px solid #e6d2d2; font-family: 'open_sansregular'; word-break:break-all; border-left:1px solid #e6d2d2; padding:5px;}
 .contRightMain table tr:nth-child(odd) {background-color:#f7f7f7;}
 .contRightMain table tr:nth-child(even) {background-color:#fff;}
+.contRightMain .dischsTblStyle tr th, .contRightMain .dischsTblStyle tr td{font-family: 'open_sanssemibold'; font-size:13px;}
 
 /* USE this for all common styling */
 .confirmBoxStyle{background-color:rgba(0, 0, 0, 0.6); position:fixed; top:0; z-index:999; left:0; width:100% !important; height:100% !important;}
@@ -123,7 +124,7 @@ display:block; font-size:13px; cursor:pointer;}
 .billDatesBox{background:#eaf5f7; border:1px solid #c2ecff; margin-left:120px; margin-top:4px; padding:5px 5px 0 5px; width:301px;}
 
 .formViewStyleM{padding:0 10px 0;}
-.formViewStyleM .textBox{background:#fafafa; border-bottom:1px solid #ededed; border-right:1px solid #d0cfcf; margin:0; padding:6px 5px; width:305px;}
+.formViewStyleM .textBox{background:#fafafa; border-bottom:1px solid #ededed; border-right:1px solid #d0cfcf; margin:0; padding:6px 5px; width:380px;}
 .formViewStyleM .textBox label{float:left; margin-right:8px; font-family: 'open_sanssemibold'; color:#333; font-size:14px;}
 .formViewStyleM .textBox span{float:left; color:#007bb4; font-family: 'open_sanssemibold'; font-size:14px; word-break:break-all;}
 
@@ -144,3 +145,7 @@ transition:border 0.25s linear 0s, color 0.25s linear 0s, background-color 0.25s
 .selectSty1 span:before{content:''; height:34px; pointer-events:none; position:absolute; width:30px; }
 .selectSty1 select option{padding:5px 3px; background:#EFEDED; border:none; outline:none; display:block; font-weight:normal;}
 .selectSty1 select option:hover{background:#ccc;}
+
+.compNameCodeM{}
+.compNameCodeM .compName{color:#333; font-size:14px; font-family: 'open_sanssemibold';}
+.compNameCodeM .compCode{font-family: 'open_sanssemibold'; color:#2587a7; font-size:13px;}
