--- a/com/css/style.css
+++ b/com/css/style.css
@@ -158,7 +158,7 @@ transition:border 0.25s linear 0s, color 0.25s linear 0s, background-color 0.25s
 @media print and (-webkit-min-device-pixel-ratio:0) {
     .printClass{
         height: auto !important;
-        width:auto;
+        width:800px;
 
     }
 }
